# itmo_2_course

./: README.md
Algos & DS/1005-timus-knapsack/: 1501-knapsack.cpp  CMakeLists.txt
Algos & DS/1005-timus-recursion/: 1005.cpp  CMakeLists.txt
Algos & DS/1207-timus-median/: 1207.cpp  CMakeLists.txt
Algos & DS/1401-timus/: 1401.cpp  CMakeLists.txt
Algos & DS/YC-A/: CMakeLists.txt  a.cpp
Algos & DS/YC-B/: CMakeLists.txt  b.cpp
Algos & DS/YC-C/: CMakeLists.txt  c.cpp
Algos & DS/YC-D/: CMakeLists.txt  d.cpp
Algos & DS/YC-E/: CMakeLists.txt  E.cpp
Algos & DS/YC_F/: CMakeLists.txt  F.cpp
Algos & DS/YC_G/: CMakeLists.txt  G.cpp
Algos & DS/YC_H/: CMakeLists.txt  H.cpp
Algos & DS/timus_1322/: 1322.cpp  CMakeLists.txt
C & ASM/assignment-1-io-library/: lib.inc
C & ASM/assignment-2-dictionary/: Makefile  README.md  lib.asm  main.asm  words.inc
C & ASM/assignment-3-image-rotation/: .clang-format
WebLab2/: pom.xml
WebLab3/: .gitignore  package-lock.json  pom.xml
assignment-1-io-library/: lib.inc
assignment-2-dictionary/: Makefile  colon.inc  dict.asm  lib.inc  main.asm
assignment-3-image-rotation/: .clang-format
assignment-3-image-rotation/solution/: CMakeLists.txt
assignment-3-image-rotation/solution/include/: bmp_header.h  bmp_padding.h  image.h  printer.h
assignment-3-image-rotation/solution/src/: main.c
assignment-3-image-rotation/solution/src/io/: bmp_header.c  bmp_io.c  file_io.c  printer.c
assignment-3-image-rotation/solution/src/utils/: status_codes_mapping.c  transform.c
assignment-4-memory-allocator/: Makefile
(+300 files in other folders)
